[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemy_robot/robot_dark.png" type="Texture" id=1]
[ext_resource path="res://scenes/RoboBomba.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 5.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 6 ), Vector2( 0, -6 ), Vector2( 0, 6 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 6.5

[node name="RoboBomba" type="KinematicBody2D" groups=["RoboBomba"]]
script = ExtResource( 2 )

[node name="fireTimer" type="Timer" parent="."]
autostart = true

[node name="moveTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0110116, -0.403739 )
shape = SubResource( 2 )
disabled = true

[node name="RobotHazardArea" type="Area2D" parent="."]
position = Vector2( 0.0220966, -0.398271 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RobotHazardArea"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.038166, -0.425489 )
scale = Vector2( 0.5, 0.5 )

[connection signal="timeout" from="fireTimer" to="." method="_on_fireTimer_timeout"]
[connection signal="area_entered" from="RobotHazardArea" to="." method="_on_RobotHazardArea_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
